{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "20097fc2-fbcb-43c7-a3f7-bd1a96ea3163",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "31e45fcc-5ffb-4835-bdea-ee1004438b59",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "9939c235-992a-4da8-8605-55c0591deb3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rock",
                    "type": "Button",
                    "id": "5ea6ed07-9ee7-4218-9098-f23c7c7b555a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scissors",
                    "type": "Button",
                    "id": "516bd105-5b72-4866-a30b-efa1f41d827e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Paper",
                    "type": "Button",
                    "id": "9996ea0c-8ab7-4f91-bd73-c5ba47ecb93d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Special",
                    "type": "Button",
                    "id": "08783fe8-4095-405a-88b2-d25132d58598",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeHand",
                    "type": "Button",
                    "id": "e0409578-62b1-4aa5-b3cc-0b29f9fedb42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Button Only Cross",
                    "id": "8d61a079-d945-4d80-bea4-9b2537e5bca2",
                    "path": "ButtonOnlyCross",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7b2cc8f9-c8ed-4bde-bdf3-2cf1a476be1f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "22e584dc-28c7-44cb-8ad3-ce2c668f527d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6a0c01a8-4db4-476f-95a6-295a2a1d1f30",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "55386a82-0251-4eaa-90d6-c6a131aa33a5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b30cd9c9-ea5a-4489-80ff-a9906071db1d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d234d877-905c-4cf2-bb94-32f23fed01d5",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scissors",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3ed6e5f-f8ec-4962-8e0f-0c551832a0a8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Paper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "706ba631-814c-4c52-9910-5ad3ebadd311",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab482033-b02b-43ef-99b8-c43f99b89b89",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Special",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "934207dd-4f5b-409d-83bb-427da333d7e2",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Title",
            "id": "96a11827-4914-4e59-85cf-90dbeb64edd7",
            "actions": [
                {
                    "name": "SelectUp",
                    "type": "Button",
                    "id": "d5562d8b-dc35-408e-8541-202b02188a7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectDown",
                    "type": "Button",
                    "id": "b9be3828-5f30-4d22-9f50-f4bddbd2cf28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Decide",
                    "type": "Button",
                    "id": "3049e1c1-eb6a-45c9-92fb-0cf30d555e13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "95b2a507-5f8a-4d06-92de-c409c05d3ecf",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30817a43-5181-451f-b1b0-b39a6acfba62",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc2786fa-2d5f-495d-add1-d930b30b0bea",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "1e5c90d4-d517-4c53-90f0-40f26d603099",
            "actions": [
                {
                    "name": "BackToTitle",
                    "type": "Button",
                    "id": "1a4508a5-5194-44b0-b30e-5165e4d7cd11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c7d4a270-145d-457f-a532-b4616b649f43",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackToTitle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}